feat:使用JDK 21现代化API：List.of()替代Guava的Lists.newArrayList()