@@ -2,8 +2,8 @@ package com.storyhasyou.kratos.utils;
 
 import cn.hutool.core.util.ArrayUtil;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 
 /**
@@ -18,8 +18,6 @@ public class ArrayUtils extends ArrayUtil {
      * values = [1,2,3,4]<br>
      * 则得到的Map是 {a=1, b=2, c=3, d=4}<br>
      * 如果两个数组长度不同，则只对应最短部分
-     * 
-     * <p>使用JDK原生API：Arrays.asList()替代Guava的Lists.newArrayList()
      * 减少外部依赖，支持null元素和空数组，保持向后兼容性
      *
      * @param <T>    the type parameter
@@ -30,10 +28,10 @@ public class ArrayUtils extends ArrayUtil {
      */
     public static <T, K> Map<T, K> zip(T[] keys, K[] values) {
         // 处理 null 或空数组的情况，保持向后兼容性
-        if (isAllEmpty(keys, values)) {
+        if (isEmpty(keys) || isEmpty(values)) {
             return Collections.emptyMap();
         }
         
-        return CollectionUtils.zip(Arrays.asList(keys), Arrays.asList(values));
+        return CollectionUtils.zip(List.of(keys), List.of(values));
     }
 }
